--- a/NatureAPI/appsettings.Development.json
+++ b/NatureAPI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=18.117.245.201;Database=StoreDB;User Id=sa;Password=HaSsi3l.02;TrustServerCertificate=True;"
   }
 }
