--- a/.dockerignore
+++ b/.dockerignore
@@ -1,27 +1,7 @@
-﻿**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/.idea
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/azds.yaml
-**/bin
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-**/appsettings.Development.json
-**/appsettings.*.json
-LICENSE
-README.md
+﻿bin/
+obj/
+/packages/
+riderModule.iml
+/_ReSharper.Caches/
+StoreApi/Properties/launchSettings.json
+ 
