--- a/NatureAPI/NatureAPI.csproj
+++ b/NatureAPI/NatureAPI.csproj
@@ -31,6 +31,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Update="Rotativa/Linux/wkhtmltopdf">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    
+    <ItemGroup>
         <Content Remove="appsettings.Development.json" />
         <None Remove="appsettings.Development.json" />
     </ItemGroup>
