--- a/NatureAPI/NatureAPI.csproj
+++ b/NatureAPI/NatureAPI.csproj
@@ -48,4 +48,8 @@
         <None Remove="..\NatureAPI.Models\appsettings.Development.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
